<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_comments"
        android:icon="@drawable/ic_comment"
        android:title="@string/comments"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_grade"
        android:title="@string/grade"
        app:showAsAction="never" />

    <item
        android:id="@+id/copy_link"
        android:title="@string/copy_link"
        app:showAsAction="never" />

    <item
        android:id="@+id/open_in_browser"
        android:title="@string/open_in_browser"
        app:showAsAction="never" />
</menu>